@@ -1,3 +1,8 @@
+2003-07-23  Per Bothner  <per@bothner.com>
+
+	* NodeCompare.java:  New class, extends Procedure2.
+	* Makefile.am (java_sources):  Update accordingly.
+
 2003-07-10  Per Bothner  <per@bothner.com>
 
 	* ElementConstructor.java (compileUsingNodeTree):  New static method.
